--- a/TodoList-Serratec/style.css
+++ b/TodoList-Serratec/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
+    --primary-color: #ffffff1;
+    --secondary-color: #ffffff;
 }
 
 * {
